- Fix rt side police car rolling off screen - More visula tweaks to end screen - Add touch event to playfield for beaming

--- a/css/style.css
+++ b/css/style.css
@@ -207,12 +207,19 @@ body, input{
 }
 
 input, #btn_savescore{
-	color:#ccc;
+	color:#ff5;
 	background-color:#000;
-	border: solid 2px #ccc;
-	padding:3px;
+	border: solid 2px #ff5;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	padding:5px;
 	text-decoration: none;
 	width: 180px;
+}
+
+input{
+	border: solid 2px #ccc;
 }
 
 header{
